added links to all 3 recipes into index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <a href="./campfire-queso.html" target="_blank" rel="nooperner noreferrer"> Campire Queso </a>
             </li>
         </ol>
+        <p> All three links above</p>
 
     </body>
 </html>
